--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,28 @@
+import Application
+import Versions
+import Build
+import dependencies.Dependencies
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion Versions.compilesdk
 
     defaultConfig {
-        applicationId "com.codingwithmitch.openchat"
-        minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        applicationId Application.applicationId
+        minSdkVersion Versions.minsdk
+        targetSdkVersion Versions.targetsdk
+        versionCode Build.version_code
+        versionName Build.version_name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    buildFeatures {
+        compose true
     }
 
     buildTypes {
@@ -27,18 +36,28 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = Versions.jvmTarget
+        useIR = true
+    }
+    composeOptions {
+        kotlinCompilerVersion Versions.kotlin_compiler_version
+        kotlinCompilerExtensionVersion Versions.kotlin_compiler_extension_version
     }
 }
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation Dependencies.kotlin_std_lib
+    implementation Dependencies.kotlin_core_ktx
+    implementation Dependencies.app_compat
+    implementation Dependencies.material
+    implementation Dependencies.constraint_layout
+
+    implementation Dependencies.compose_ui
+    implementation Dependencies.compose_ui_tooling
+    implementation Dependencies.compose_foundation
+    implementation Dependencies.compose_material
+    implementation Dependencies.compose_material_icons_core
+    implementation Dependencies.compose_material_icons_extended
+
 }
