--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+import Versions
+import Build
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext.kotlin_version = Versions.kotlin
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.0-alpha15"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath Build.gradle
+        classpath Build.kotlin_gradle_plugin
+        classpath Build.hilt
     }
 }
 
