Fix button focus

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ import dependencies.Dependencies
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
 }
