Build CreateAccountScreen.kt and PasswordResetScreen.kt. Setup navigation between the "Auth" screens. Install form validation for all screens.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation Dependencies.material_dialogs_core
 
     implementation Dependencies.leak_canary
+
+//    implementation Dependencies.viewmodel_saved_state
+//    implementation Dependencies.viewmodel_livedata_ktx
 }
 
 
